--- a/Egern/OilPrice.yaml
+++ b/Egern/OilPrice.yaml
@@ -13,10 +13,10 @@ compat_arguments_desc: |-
 
 scriptings:
 - generic:
-    name: {{{省份}}}/{{{城市}}}
+    name: {{{省份}}}{{{城市}}}
     script_url: https://raw.githubusercontent.com/getsomecat/GetSomeCats/Surge/script/youjia.js
     arguments:
       _compat.$argument: {{{省份}}}/{{{城市}}}
     timeout: 5
 panels:
-- name: {{{省份}}}/{{{城市}}}
+- name: {{{省份}}}{{{城市}}}
